2012-04-17 17:39  molnarzs

	* RELEASE-NOTES, VERSION, packaging/rpm/specs/srm-ifce.spec:
	  [ticket:]: Release notes updated for srm-ifce_R_1_1_1_1

2012-03-02 14:22  adevress

	* src/srmv2_data_transfer_functions.c: -correct asychronous put
	  invalid token, GGUS ticket related to EOS

2012-02-14 12:59  adevress

	* packaging/rpm/specs/srm-ifce.spec: - increase spec file packaging
	  release number [ticket:251]

2012-02-13 08:30  adevress

	* src/srmv2_space_management_functions.c: - correct again ^ 34
	  memory corruption from gsoap [ticket:274]

2012-02-12 21:42  adevress

	* CMakeLists.txt, src/CMakeLists.txt,
	  src/srmv2_discovery_functions.c,
	  src/srmv2_permission_functions.c: -correct memory corrpution from
	  gsoapfor discovery and directories function [ticket:274]

2012-02-12 21:28  adevress

	* src/srmv2_directory_functions.c: -correct memory corrpution from
	  gsoap [ticket:274]

2012-02-12 09:14  adevress

	* src/srmv2_data_transfer_functions.c: -add more fix for soap
	  memory corruption in the srm-ifce [ticket:271]

2012-02-09 14:54  adevress

	* packaging/rpm/specs/srm-ifce.spec: -correct issue for fc18
	  [ticket:251]

2012-02-09 09:03  adevress

	* packaging/rpm/specs/srm-ifce.spec: - correct pakcaging problem
	  after gsoap repackaging [ticket:251]

2012-02-02 13:01  adevress

	* packaging/rpm/specs/srm-ifce.spec: - remove macro on specfiles,
	  bug on i686 [ticket:251]

2012-01-30 16:12  adevress

	* packaging/rpm/specs/srm-ifce.spec: - change versiong system

2012-01-30 16:08  adevress

	* packaging/rpm/specs/srm-ifce.spec, src/CMakeLists.txt,
	  src/srm_util.c, src/srm_util.h,
	  src/srmv2_data_transfer_functions.c,
	  src/srmv2_directory_functions.c,
	  src/srmv2_permission_functions.c: -fix the gsoap stack smash
	  problem
	  increase the version of srm-ifce for epel
	  - change the versioning system

2012-01-16 14:39  adevress

	* packaging/bin/packager_rpm.sh, packaging/rpm/specs/srm-ifce.spec:
	  -add source url tar